@@ -71,7 +71,6 @@ evaluateSurfaceDensities = Potential.evaluateSurfaceDensities
 mass = Potential.mass
 evaluateRforces = Potential.evaluateRforces
 evaluatephitorques = Potential.evaluatephitorques
-evaluatephiforces = Potential.evaluatephiforces
 evaluatezforces = Potential.evaluatezforces
 evaluaterforces = Potential.evaluaterforces
 evaluateR2derivs = Potential.evaluateR2derivs
@@ -108,7 +107,6 @@ evaluateplanarPotentials = planarPotential.evaluateplanarPotentials
 evaluateplanarRforces = planarPotential.evaluateplanarRforces
 evaluateplanarR2derivs = planarPotential.evaluateplanarR2derivs
 evaluateplanarphitorques = planarPotential.evaluateplanarphitorques
-evaluateplanarphiforces = planarPotential.evaluateplanarphiforces
 evaluatelinearPotentials = linearPotential.evaluatelinearPotentials
 evaluatelinearForces = linearPotential.evaluatelinearForces
 PotentialError = Potential.PotentialError
